--- a/app/styles/sass/blocks/reviews.scss
+++ b/app/styles/sass/blocks/reviews.scss
@@ -25,14 +25,25 @@
         position: static;
         transform: none;
         margin: 0;
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        &:after {
+            font-size: 30px;
+        }
     }
     &__navigation {
         display: flex;
         flex-direction: row-reverse;
         gap: 0 1rem;
-        position: absolute;
-        top: 2rem;
-        right: 1rem;
+        padding-bottom: 1rem;
+        position: static;
+        
+        // top: 2rem;
+        // right: 1rem;
+    }
+    .swiper-slide {
+        height: 100%;
     }
 
 }
@@ -50,7 +61,7 @@
     border-radius: 0.5rem;
     padding: 1.5em;
     background-image: linear-gradient(to right, rgba($color: #5fc9f3, $alpha: 0.2) 0%, #fff 100%);
-    
+    height: 100%;
     // background-size: 150% auto;
     // background-attachment: fixed;
     .swiper-slide-active & {
